--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://careerbuddy:password@localhost:5432/careerbuddy_db"
+DATABASE_URL="mongodb://careerbuddy:password@localhost:27017/careerbuddy_db?authSource=admin"
 
 # JWT Authentication
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
