--- a/env.example
+++ b/env.example
@@ -1,27 +1,102 @@
-# Database
-DATABASE_URL="mongodb://careerbuddy:password@localhost:27017/careerbuddy_db?authSource=admin"
+# =================================
+# CareerBuddy Environment Configuration
+# =================================
 
-# JWT Authentication
-JWT_SECRET="your-super-secret-jwt-key-change-in-production"
-JWT_EXPIRES_IN="7d"
+# =====================================
+# DATABASE CONFIGURATION
+# =====================================
+DATABASE_URL="mongodb://localhost:27017/careerbuddy_db"
 
-# Backend API
+# =====================================
+# SERVER CONFIGURATION
+# =====================================
+NODE_ENV="development"
 BACKEND_PORT=3001
 FRONTEND_URL="http://localhost:3000"
 
-# Frontend
-NEXT_PUBLIC_API_URL="http://localhost:3001/api"
+# =====================================
+# JWT AUTHENTICATION
+# =====================================
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+JWT_EXPIRATION="7d"
+JWT_REFRESH_SECRET="your-super-secret-refresh-key-change-this-in-production"
+JWT_REFRESH_EXPIRATION="30d"
 
-# Email (for password reset, notifications)
+# =====================================
+# AI SERVICES CONFIGURATION
+# =====================================
+AI_RESUME_ANALYZER_URL="http://localhost:8001"
+AI_JOB_MATCHER_URL="http://localhost:8002"
+
+# =====================================
+# FILE UPLOAD CONFIGURATION
+# =====================================
+UPLOAD_PATH="./uploads"
+MAX_FILE_SIZE="5242880"  # 5MB in bytes
+ALLOWED_FILE_TYPES="pdf,doc,docx,txt"
+
+# =====================================
+# EMAIL CONFIGURATION (Optional)
+# =====================================
 SMTP_HOST="smtp.gmail.com"
-SMTP_PORT=587
+SMTP_PORT="587"
+SMTP_SECURE="false"
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
+EMAIL_FROM="noreply@careerbuddy.ai"
 
-# File Upload
-MAX_FILE_SIZE="5MB"
-UPLOAD_PATH="./uploads"
+# =====================================
+# REDIS CONFIGURATION (Optional - for caching)
+# =====================================
+REDIS_URL="redis://localhost:6379"
 
-# AI Services (placeholder for future Python services)
-AI_SERVICE_URL="http://localhost:5000"
-AI_SERVICE_API_KEY="placeholder-api-key"
+# =====================================
+# LOGGING CONFIGURATION
+# =====================================
+LOG_LEVEL="info"
+LOG_FILE="logs/app.log"
+
+# =====================================
+# RATE LIMITING
+# =====================================
+RATE_LIMIT_TTL="60"      # Time to live in seconds
+RATE_LIMIT_MAX="100"     # Max requests per TTL window
+
+# =====================================
+# CORS CONFIGURATION
+# =====================================
+CORS_ORIGIN="http://localhost:3000"
+CORS_CREDENTIALS="true"
+
+# =====================================
+# SECURITY CONFIGURATION
+# =====================================
+BCRYPT_ROUNDS="12"
+SESSION_SECRET="your-session-secret-key"
+
+# =====================================
+# EXTERNAL API KEYS (Optional)
+# =====================================
+OPENAI_API_KEY="your-openai-api-key"
+GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
+LINKEDIN_API_KEY="your-linkedin-api-key"
+
+# =====================================
+# MONITORING & ANALYTICS (Optional)
+# =====================================
+SENTRY_DSN="your-sentry-dsn"
+GOOGLE_ANALYTICS_ID="your-ga-id"
+
+# =====================================
+# DEVELOPMENT/TESTING
+# =====================================
+ENABLE_SWAGGER="true"
+ENABLE_DEBUG_LOGS="true"
+SEED_DATABASE="false"
+
+# =====================================
+# PRODUCTION SETTINGS
+# =====================================
+# HTTPS_KEY_PATH="/path/to/private-key.pem"
+# HTTPS_CERT_PATH="/path/to/certificate.pem"
+# CLUSTER_MODE="true"
