--- a/backend/package.json
+++ b/backend/package.json
@@ -33,8 +33,10 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.2.0",
     "@types/mongoose": "^5.11.96",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
