--- a/env.example
+++ b/env.example
@@ -5,7 +5,7 @@
 # =====================================
 # DATABASE CONFIGURATION
 # =====================================
-DATABASE_URL="mongodb://localhost:27017/careerbuddy_db"
+MONGODB_URL="mongodb+srv://prithraj120_db_user:2hp6v5DySDDwG0Vn@cluster0.ih61mql.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 
 # =====================================
 # SERVER CONFIGURATION
