--- a/ai-services/resume-analyzer/requirements.txt
+++ b/ai-services/resume-analyzer/requirements.txt
@@ -7,7 +7,7 @@ PyPDF2==3.0.1
 nltk==3.8.1
 spacy==3.7.2
 scikit-learn==1.3.2
-numpy==1.24.3
+numpy>=1.25.0,<2.0.0
 pandas==2.1.4
 requests==2.31.0
 python-dotenv==1.0.0
