--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:with-ai": "node scripts/start-with-ai.js",
+    "setup:ai": "node scripts/setup-ai-services.js",
+    "setup:ai:venv": "node scripts/setup-ai-services.js --venv",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
