--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.2.0",
     "@types/mongoose": "^5.11.96",
+    "@types/pdf-parse": "^1.1.5",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdf-parse": "^2.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
