--- a/backend/package.json
+++ b/backend/package.json
@@ -35,17 +35,19 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@types/mongoose": "^5.11.96",
-    "@types/pdf-parse": "^1.1.5",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.18.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pdf-parse": "^2.1.6",
+    "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.3",
+    "pdf2pic": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0"
@@ -61,6 +63,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
+    "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
