--- a/backend/package.json
+++ b/backend/package.json
@@ -32,8 +32,10 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "^10.4.20",
     "@types/mongoose": "^5.11.96",
     "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
@@ -50,6 +52,7 @@
     "pdf2pic": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
